# wallet-service

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  get_balancer_version.sh
service/: CMakeLists.txt  keykeeper_proxy.cpp  keykeeper_proxy.h  monitor.cpp  pipe.cpp  pipe.h  reactor.cpp  reactor.h  service.cpp  service_api.cpp  service_api.h  service_client.cpp  service_client.h  sessions.cpp  utils.cpp  utils.h  websocket_server.cpp  websocket_server.h
service-balancer/: activity-log.go  config.go  config.json  go.mod  go.sum  jsonrpc-bbs.go  main.go  newmsg-request.go  sbbs-monitor.go  services.go  status-request.go  version.go  wallet-service.go
service-balancer/services/: service.go  services.go
